# agent-runtime-lab

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
examples/: calculator_demo.py
src/agent_runtime_lab/capabilities/: base.py  registry.py
src/agent_runtime_lab/runtime/: planner.py  runtime.py
src/agent_runtime_lab/schemas/: action.py  capability.py  observation.py  state.py
src/agent_runtime_lab/tools/: __init__.py  calculator.py  file_tools.py
tests/: conftest.py  test_capability_registry.py  test_runtime.py  test_tools.py
