[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-lab"
version = "0.1.0"
description = "A lightweight general-purpose agent runtime for tools, MCP, skills, memory, and knowledge base integration."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0"
]

mcp = [
    "mcp>=1.0.0"
]

knowledge = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pytest-cache-files-*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
